--- a/indexstyle.css
+++ b/indexstyle.css
@@ -16,7 +16,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/homebg.png);
+    background-image: url(Images/homebg.png);
     background-size: cover;
     background-position: center;
 }
@@ -324,7 +324,7 @@ nav .fas{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/phone-background.png);
+        background-image: url(Images/phone-background.png);
     }
 
     .header-text{
