added piano picture

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -25,14 +25,13 @@ body{
 }
 
 
-
 nav{
     display: flex;
-    align-items: right;
+    align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-   
 }
+
 
 .logo{
     width: 200px;
